Bug 237091. Remove unnecessary WindowOffset and RootWidget functionality from the view manager. r+sr=dbaron